--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,8 @@ nav{
     width: 100%;
     margin: 0 auto;
     background-color: var(--menu-gris);
-    position:fixed;
+    position: fixed;
+    overflow: hidden;
     display: flex;
     flex-direction: row;
     align-items: top;
@@ -67,7 +68,6 @@ nav{
     transition: 0,5s;
     z-index: 1;
     border-bottom: grey solid 1px;
-
 }
 
 #photo-profile{
