--- a/styles.css
+++ b/styles.css
@@ -159,10 +159,8 @@ nav input[type=checkbox]:checked + ul {
     padding: 3px 15px;
 }
 
-
 .accueil-bloc1{
-    position: relative;
-    
+    position: relative;  
 }
 
 h1{
@@ -177,7 +175,6 @@ h1{
     transform: translate(0, -100%);
     opacity: 0;
 }
-
 
 .titre-h2{
     position: relative;
@@ -237,7 +234,6 @@ p{
     margin-bottom: 3px;   
 }
 
-
 #accueil .bouton a{
     display: flex;
     margin-right: 0.8rem;
@@ -251,8 +247,6 @@ p{
     animation: pop 0.5s linear 3.5s 1 forwards;
     opacity: 0;
 }
-
-
 
 #accueil .rouge a{
     color: whitesmoke ;
@@ -271,7 +265,6 @@ p{
 /********************/
 /* SECTION PARCOURS */
 /********************/
-
 #parcours{
     position: relative;
     display: flex;
@@ -313,7 +306,6 @@ section h2{
     background-color: var(--brique);
 }
 
-
 .main-text{
     position: relative;
     justify-self: space-around;
@@ -344,12 +336,10 @@ section h2{
 /***********************/
 /* SECTION COMPETENCES */
 /***********************/
-
 #competences{
     position: relative;
     display: flex;
     flex-direction: column;
-    /* height: calc(1.3*(100vh - 38px)); */
     min-height: calc(100vh - 38px);
     background-color: var(--font-black);
     z-index: 0;
@@ -485,13 +475,11 @@ h3{
     position: relative;
     display: flex;
     flex-direction: column;
-    /* height: calc(2*(100vh - 38px)); */
     background-image: url("/img/white-paper-texture-background.jpg"); /* Image de Vectonauta sur Freepik" */
     background-size: cover;
     background-position: right;
     line-height: 1.5em;
 }
-
 
 #cursus .gris{
     background-color: #D0CECE;
@@ -502,7 +490,6 @@ h3{
     justify-content: space-between;
     height: 90%;
     padding-top: 10px;
-
 }
 
 .item-cursus{
@@ -619,7 +606,6 @@ h3{
     width: 75%;
     flex-shrink: 1;
     justify-content: space-between;
-    /* padding-top: 10px; */
     box-sizing: border-box;
     margin-bottom: 15px;
     background-color: inherit;
@@ -640,7 +626,6 @@ h3{
     text-align: center;
     margin-bottom: 15px;
     font-size: calc(15px + 0.390625vw);
-
 }
 
 .background-green{
@@ -657,7 +642,6 @@ h3{
     font-size:calc(1.5rem + 1.3vh);
     display: flex;
     padding: 0.5rem;
-
 }
 
 #contact .item-contact p{
@@ -724,7 +708,6 @@ h3{
     opacity: 1;
 }
 
-
 .reveal-left{
     position: relative;
     transform: translateX(100px);
@@ -779,30 +762,14 @@ h3{
 
 
   @keyframes rotation {
-    from {
-      transform: rotateY(0deg);
-    }
-    to {
-      transform: rotateY(360deg);
-    }
+    from { transform: rotateY(0deg); }
+    to { transform: rotateY(360deg); }
   }
-
 
   @keyframes open{
     from { width: 0%; background-color: #ea505d;}
     to{ width: 100%; color: whitesmoke; background-color: #ea505d; }
   }
-
-  @keyframes open-sous-titre1{
-    from{ width: 0%;}
-    to{ width: 168px; /*168*/}
-  }
-
-  @keyframes open-sous-titre2{
-    from{ width: 0; }
-    to{ width: 129px; }
-  }
-
 
   @keyframes bounce{
     0% { transform: scale(1,1); }
@@ -812,26 +779,13 @@ h3{
 
 
 
-  /* non utilisées*/
-  @keyframes translation {
-    0% {
-      transform: perspective(100px) translate3d(0px, 0px, -20px);
-      opacity: 0.2;
-    }
-    100%{
-        transform: perspective(100px) translate3d(0px, 0px, 0px)  
-    }
-}
-
-    @keyframes showTopImage {
-        0% { transform: translate3d(-15%, 0, 0); opacity: 0; }
-        50% {opacity: 0.5;}
-        100% { transform: translate3d(0, 0, 0); opacity: 1; }
-    }
 
 
 
 
+
+
+/* ***************************************************************** */
 /*Styles spécifiques pour les écrans de taille moyenne type tablette*/
 @media screen and (min-width: 650px) and (max-width: 979px){
     
@@ -1154,7 +1108,7 @@ h3{
 
 
 
-
+/* ***************************************************************** */
 /*Styles spécifiques pour les grands écrans type écrans d'ordinateur*/
 @media screen and (min-width: 980px){
 
@@ -1438,7 +1392,6 @@ h3{
     #competences .main-text{
         flex-direction: column;
         flex-wrap: wrap;
-        /* flex: 1 1 400px; */
         margin: 20px 20px 40px;
         height: 80%;
         align-content: space-around;
@@ -1732,8 +1685,5 @@ h3{
     .item-contact-petit .fa-github:hover{
         color: #161B22;
     }
-
-
-
 
 }
