--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,18 @@ html{
     font-size: calc(15px + 0.390625vw);
 }
 
+.no-js #loader { display: none;  }
+.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+.se-pre-con {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background: url(/img/Spin-1s-101px.gif) center no-repeat #3B3838;
+}
+
 
 strong{ 
     color: var(--brique);
@@ -63,7 +75,7 @@ nav{
     display: flex;
     flex-direction: row;
     align-items: top;
-    justify-content: right;
+    justify-content:right;
     top: 0px;
     transition: 0,5s;
     z-index: 1;
